--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,17 @@ body {
   gap: 24px;
 }
 
+.svg-icon-content {
+  background-color: var(--portfolio-button-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
 .features-content {
   flex-basis: calc((100% - 72px) / 4);
 }
@@ -312,6 +323,69 @@ body {
   letter-spacing: 0.02em;
 }
 
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.social-icon-item {
+  width: 40px;
+  height: 40px;
+}
+
+.social-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--logo-color);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-icon {
+  fill: var(--portfolio-button-color);
+}
+
+
+/* ---------------CUSTOMERS------------------------------- */
+
+
+.customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+
+.customers-title {
+  color: var(--text-color);
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  margin-bottom: 72px;
+}
+
+
+.customers-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.customers-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #8e8f99;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+}
+
 /*--------------------------- FOOTER ---------------------*/
 
 .footer {
@@ -319,6 +393,19 @@ body {
   padding-top: 100px;
   padding-bottom: 100px;
 }
+
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-webstudio-content {
+  margin-right: 120px;
+  width: 264px;
+  height: 112px;
+}
+
+
 
 .footer-logo-web {
   font-family: "Raleway", sans-serif;
@@ -345,6 +432,37 @@ body {
   max-width: 264px;
   color: var(--team-color);
 }
+
+.footer-social-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+  margin-bottom: 16px;
+}
+
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
+
+.footer-social-item {
+  width: 40px;
+  height: 40px
+}
+
+.footer-social-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--logo-color);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 
 
