--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,15 @@ body {
   background-color: var(--text-color);
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 1440px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)), url(/images/background.jpg);
 }
 
 .hero-title {
