--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)), url(./images/background.jpg);
+      rgba(46, 47, 66, 0.7)), url(../images/background.jpg);
 }
 
 .hero-title {
