--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,8 @@ body {
 .header {
   padding-bottom: 24px;
   padding-top: 24px;
-  border-bottom: 1px solid #E7E9FC
+  border-bottom: 1px solid #E7E9FC;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-nav {
@@ -308,6 +309,7 @@ body {
   background-color: #FFFFFF;
   border-radius: 0px 0px 4px 4px;
   flex-basis: calc((100%-72px)/4);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-info-text {
@@ -543,6 +545,7 @@ body {
   background-color: var(--hover-link-color);
   color: #fff;
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portf-card-list {
@@ -554,6 +557,11 @@ body {
 
 .portf-card-item {
   width: calc((100% - 48px) / 3);
+}
+
+.portf-card-item:hover,
+.portf-card-item:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .card-text-info {
