--- a/css/styles.css
+++ b/css/styles.css
@@ -557,11 +557,15 @@ body {
 
 .portf-card-item {
   width: calc((100% - 48px) / 3);
+}
+
+
+.portf-card-link {
   display: block;
 }
 
-.portf-card-item:hover,
-.portf-card-item:focus {
+.portf-card-link:hover,
+.portf-card-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
